force-app/main/default/objects/Salesforce_Integration_Settings__mdt/Salesforce_Integration_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Custom metadata to store settings related to Salesforce Integrations.</description>
    <label>Salesforce Integration Settings</label>
    <pluralLabel>Salesforce Integration Settings</pluralLabel>
</CustomObject>