force-app/main/default/objects/Salesforce_Integration_Settings__mdt/fields/Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Access_Token__c</fullName>
    <description>Field to store access token for an API call.</description>
    <label>Access Token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>