force-app/main/default/objects/Salesforce_Integration_Settings__mdt/fields/Authorization_Url__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Url__c</fullName>
    <description>Field to store Authorization Url</description>
    <label>Authorization Url</label>
    <type>Url</type>
</CustomField>