force-app/main/default/objects/Salesforce_Integration_Settings__mdt/fields/Expires_In_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Expires_In_Seconds__c</fullName>
    <description>Field to store the expiration time of auth code in seconds.</description>
    <label>Expires In(Seconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>