force-app/main/default/objects/Salesforce_Integration_Settings__mdt/fields/Expires_In_Time__c.field-meta.xml
<CustomField>
    <fullName>Expires_In_Time__c</fullName>
    <description>Field to store date/time for expiration of auth token.</description>
    <label>Expires In Time</label>
    <type>DateTime</type>
</CustomField>