force-app/main/default/objects/Salesforce_Integration_Settings__mdt/fields/Instance_Url__c.field-meta.xml
<CustomField>
    <fullName>Instance_Url__c</fullName>
    <description>Field to store instance url.</description>
    <label>Instance Url</label>
    <type>Url</type>
</CustomField>