force-app/main/default/objects/Salesforce_Integration_Settings__mdt/fields/Page_Name__c.field-meta.xml
<CustomField>
    <fullName>Page_Name__c</fullName>
    <description>Field to store the page name.</description>
    <label>Page Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>