force-app/main/default/objects/Salesforce_Integration_Settings__mdt/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <description>Field to store the scope.</description>
    <label>Scope</label>
    <length>255</length>
    <type>Text</type>
</CustomField>