force-app/main/default/objects/Salesforce_Integration_Settings__mdt/fields/Token_Url__c.field-meta.xml
<CustomField>
    <fullName>Token_Url__c</fullName>
    <description>Field to store the token url.</description>
    <label>Token Url</label>
    <type>Url</type>
</CustomField>